--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,9 +1,11 @@
 .tarjeta {
     margin: 2%;
     display: inline-block;
-
 }
 #contenido {
+    background-color: skyblue;
+  }
+#contenidoIntraining {
     background-color: skyblue;
   }
 .card-body{
@@ -15,7 +17,6 @@
     width: 20%;
     display: inline-block;
 }
-
 /*
     Pantalla Extra Large (>=1200px)
 */
@@ -101,7 +102,6 @@
     .col-xs-2{width: 16.66666667%;}
     .col-xs-1{width: 8.33333333%;}
 }
-
 @media(max-width:1199px){
     #cabecera{
         height: 200px;
@@ -117,8 +117,6 @@
         #reserva{
             width: 70%;
         }
-
-        
 }
 @media(max-width:991px){
     #formulario{
